octeontx2-af: Perform cpt lf teardown in non FLR path (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5373,6 +5373,7 @@
 	patches.suse/net-intel-igc_ptp-fix-build-for-UML.patch
 	patches.suse/net-tulip-winbond-840-fix-build-for-UML.patch
 	patches.suse/octeontx2-af-Enable-CPT-HW-interrupts.patch
+	patches.suse/octeontx2-af-Perform-cpt-lf-teardown-in-non-FLR-path.patch
 	patches.suse/tcp-switch-orphan_count-to-bare-per-cpu-counters.patch
 	patches.suse/soc-fsl-dpio-extract-the-QBMAN-clock-frequency-from-.patch
 	patches.suse/soc-fsl-dpio-add-support-for-irq-coalescing-per-soft.patch
