octeontx2-pf: Enable NETIF_F_RXALL support for VF driver (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -873,6 +873,7 @@
 	patches.suse/octeontx2-af-Modify-install-flow-error-codes.patch
 	patches.suse/octeontx2-af-add-proper-return-codes-for-AF-mailbox-.patch
 	patches.suse/octeontx2-af-Add-debug-messages-for-failures.patch
+	patches.suse/octeontx2-pf-Enable-NETIF_F_RXALL-support-for-VF-dri.patch
 	patches.suse/iavf-use-mutexes-for-locking-of-critical-sections.patch
 	patches.suse/i40e-Fix-spelling-mistake-dissable-disable.patch
 	patches.suse/selftests-nci-Fix-the-code-for-next-nlattr-offset.patch
