--- a/series.conf
+++ b/series.conf
@@ -10392,6 +10392,7 @@
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
 	patches.suse/i40e-remove-dead-stores-on-XSK-hotpath.patch
+	patches.suse/octeontx2-pf-cn10k-add-support-for-new-ptp-timestamp.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
