octeontx2: Move devlink registration to be last devlink command (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5156,6 +5156,7 @@
 	patches.suse/devlink-Notify-users-when-objects-are-accessible.patch
 	patches.suse/bnxt_en-Register-devlink-instance-at-the-end-devlink.patch
 	patches.suse/ice-Open-devlink-when-device-is-ready.patch
+	patches.suse/octeontx2-Move-devlink-registration-to-be-last-devli.patch
 	patches.suse/net-mlx4-Move-devlink_register-to-be-the-last-initia.patch
 	patches.suse/net-mlx5-Accept-devlink-user-input-after-driver-init.patch
 	patches.suse/mlxsw-core-Register-devlink-instance-last.patch
