--- a/series.conf
+++ b/series.conf
@@ -5187,6 +5187,7 @@
 	patches.suse/gve-Use-kvcalloc-instead-of-kvzalloc.patch
 	patches.suse/devlink-Add-missed-notifications-iterators.patch
 	patches.suse/octeontx2-af-Adjust-LA-pointer-for-cpt-parse-header.patch
+	patches.suse/octeontx2-pf-Add-XDP-support-to-netdev-PF.patch
 	patches.suse/ixgbe-let-the-xdpdrv-work-with-more-than-64-cpus.patch
 	patches.suse/net-mlx4_en-Add-XDP_REDIRECT-statistics.patch
 	patches.suse/devlink-report-maximum-number-of-snapshots-with-regi.patch
