--- a/series.conf
+++ b/series.conf
@@ -1070,6 +1070,7 @@
 	patches.suse/igc-Add-support-for-CBS-offloading.patch
 	patches.suse/octeontx2-pf-Fix-inconsistent-license-text.patch
 	patches.suse/octeontx2-af-Fix-inconsistent-license-text.patch
+	patches.suse/octeontx2-pf-Add-vlan-etype-to-ntuple-filters.patch
 	patches.suse/wcn36xx-Ensure-finish-scan-is-not-requested-before-s.patch
 	patches.suse/wcn36xx-Fix-missing-frame-timestamp-for-beacon-probe.patch
 	patches.suse/ath9k-fix-OOB-read-ar9300_eeprom_restore_internal.patch
