--- a/series.conf
+++ b/series.conf
@@ -5591,6 +5591,7 @@
 	patches.suse/RDMA-mlx5-Replace-struct-mlx5_core_mkey-by-u32-key.patch
 	patches.suse/RDMA-mlx5-Move-struct-mlx5_core_mkey-to-mlx5_ib.patch
 	patches.suse/RDMA-mlx5-Attach-ndescs-to-mlx5_ib_mkey.patch
+	patches.suse/octeontx2-af-debugfs-Minor-changes.patch
 	patches.suse/bnxt_en-refactor-printing-of-device-info.patch
 	patches.suse/bnxt_en-refactor-cancellation-of-resource-reservatio.patch
 	patches.suse/bnxt_en-implement-devlink-dev-reload-driver_reinit.patch
