octeontx2-af: cn10k: Use appropriate register for LMAC enable (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -9031,6 +9031,7 @@
 	patches.suse/octeontx2-af-Do-not-fixup-all-VF-action-entries.patch
 	patches.suse/octeontx2-af-Fix-LBK-backpressure-id-count.patch
 	patches.suse/octeontx2-af-Retry-until-RVU-block-reset-complete.patch
+	patches.suse/octeontx2-af-cn10k-Use-appropriate-register-for-LMAC.patch
 	patches.suse/octeontx2-af-cn10k-Do-not-enable-RPM-loopback-for-LP.patch
 	patches.suse/octeontx2-pf-Forward-error-codes-to-VF.patch
 	patches.suse/net-sfp-ignore-disabled-SFP-node.patch
