--- a/series.conf
+++ b/series.conf
@@ -5334,6 +5334,7 @@
 	patches.suse/bnxt-use-netif_is_rxfh_configured-instead-of-open-co.patch
 	patches.suse/msft-hv-2451-hv_netvsc-use-netif_is_bond_master-instead-of-open-c.patch
 	patches.suse/ethernet-Remove-redundant-flush_workqueue-calls.patch
+	patches.suse/octeontx2-pf-Simplify-the-receive-buffer-size-calcul.patch
 	patches.suse/gve-Switch-to-use-napi_complete_done.patch
 	patches.suse/gve-Add-rx-buffer-pagecnt-bias.patch
 	patches.suse/gve-Do-lazy-cleanup-in-TX-path.patch
