--- a/series.conf
+++ b/series.conf
@@ -1190,6 +1190,7 @@
 	patches.suse/selftests-bpf-Fix-potential-unreleased-lock.patch
 	patches.suse/net-sched-Fix-qdisc_rate_table-refcount-leak-when-ge.patch
 	patches.suse/net-qualcomm-fix-QCA7000-checksum-handling.patch
+	patches.suse/octeontx2-af-Use-NDC-TX-for-transmit-packet-data.patch
 	patches.suse/octeontx2-af-Fix-loop-in-free-and-unmap-counter.patch
 	patches.suse/octeontx2-af-Fix-mailbox-errors-in-nix_rss_flowkey_c.patch
 	patches.suse/octeontx2-af-Fix-static-code-analyzer-reported-issue.patch
