--- a/series.conf
+++ b/series.conf
@@ -1068,6 +1068,7 @@
 	patches.suse/igc-Use-default-cycle-start-and-end-values-for-queue.patch
 	patches.suse/igc-Simplify-TSN-flags-handling.patch
 	patches.suse/igc-Add-support-for-CBS-offloading.patch
+	patches.suse/octeontx2-pf-Fix-inconsistent-license-text.patch
 	patches.suse/wcn36xx-Ensure-finish-scan-is-not-requested-before-s.patch
 	patches.suse/wcn36xx-Fix-missing-frame-timestamp-for-beacon-probe.patch
 	patches.suse/ath9k-fix-OOB-read-ar9300_eeprom_restore_internal.patch
