octeontx2-af: fix error code in is_valid_offset() (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -12132,6 +12132,7 @@
 	patches.suse/net-ethernet-ti-am65-cpsw-nuss-Fix-some-refcount-lea.patch
 	patches.suse/net-smc-fixes-for-converting-from-struct-smc_cdc_tx_pend-to-struct-smc_wr_tx_pend_priv
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
+	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
 	patches.suse/ARM-pxa-maybe-fix-gpio-lookup-tables.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
