--- a/series.conf
+++ b/series.conf
@@ -652,6 +652,7 @@
 	patches.suse/net-usb-asix-ax88772-add-missing-stop.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
+	patches.suse/octeontx2-af-Enhance-mailbox-trace-entry.patch
 	patches.suse/igb-Add-counter-to-i21x-doublecheck.patch
 	patches.suse/igb-Avoid-memcpy-over-reading-of-ETH_SS_STATS.patch
 	patches.suse/tipc-fix-an-use-after-free-issue-in-tipc_recvmsg.patch
