--- a/series.conf
+++ b/series.conf
@@ -10855,6 +10855,7 @@
 	patches.suse/net-hns3-fix-phy-can-not-link-up-when-autoneg-off-an.patch
 	patches.suse/qlcnic-dcb-default-to-returning-EOPNOTSUPP.patch
 	patches.suse/net-x25-Fix-null-ptr-deref-caused-by-x25_disconnect.patch
+	patches.suse/octeontx2-af-initialize-action-variable.patch
 	patches.suse/netfilter-nf_conntrack_tcp-preserve-liberal-flag-in-.patch
 	patches.suse/net-bnxt_ptp-fix-compilation-error.patch
 	patches.suse/ptrace-Check-PTRACE_O_SUSPEND_SECCOMP-permission-on-.patch
