--- a/series.conf
+++ b/series.conf
@@ -950,6 +950,7 @@
 	patches.suse/net-mlx5-E-switch-Allow-setting-share-max-tx-rate-li.patch
 	patches.suse/net-mlx5-E-switch-Allow-to-add-vports-to-rate-groups.patch
 	patches.suse/net-mlx5-E-switch-Add-QoS-tracepoints.patch
+	patches.suse/octeontx2-pf-Add-check-for-non-zero-mcam-flows.patch
 	patches.suse/mac80211-remove-unnecessary-NULL-check-in-ieee80211_.patch
 	patches.suse/mac80211-Fix-monitor-MTU-limit-so-that-A-MSDUs-get-t.patch
 	patches.suse/mac80211-Fix-insufficient-headroom-issue-for-AMSDU.patch
