octeontx2-af: Fix spelling mistake "Makesure" -> "Make sure" (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -757,6 +757,7 @@
 	patches.suse/ax88796-export-ax_NS8390_init-hook.patch
 	patches.suse/xsurf100-drop-include-of-lib8390.c.patch
 	patches.suse/wan-remove-stale-Kconfig-entries.patch
+	patches.suse/octeontx2-af-Fix-spelling-mistake-Makesure-Make-sure.patch
 	patches.suse/dpaa2-switch-do-not-enable-the-DPSW-at-probe-time.patch
 	patches.suse/bus-fsl-mc-extend-fsl_mc_get_endpoint-to-pass-interf.patch
 	patches.suse/can-j1939-j1939_session_tx_dat-fix-typo.patch
