--- a/series.conf
+++ b/series.conf
@@ -5121,6 +5121,7 @@
 	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
 	patches.suse/net-e1000e-solve-insmod-Unknown-symbol-mutex_lock-er.patch
+	patches.suse/octeontx2-af-Fix-uninitialized-variable-val.patch
 	patches.suse/devlink-Delete-not-used-devlink-APIs.patch
 	patches.suse/libbpf-Don-t-crash-on-object-files-with-no-symbol-ta.patch
 	patches.suse/net-net_namespace-Fix-undefined-member-in-key_remove.patch
