octeontx2-af: Remove redundant initialization of variable blkaddr (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5122,6 +5122,7 @@
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
 	patches.suse/net-e1000e-solve-insmod-Unknown-symbol-mutex_lock-er.patch
 	patches.suse/octeontx2-af-Fix-uninitialized-variable-val.patch
+	patches.suse/octeontx2-af-Remove-redundant-initialization-of-vari.patch
 	patches.suse/devlink-Delete-not-used-devlink-APIs.patch
 	patches.suse/libbpf-Don-t-crash-on-object-files-with-no-symbol-ta.patch
 	patches.suse/net-net_namespace-Fix-undefined-member-in-key_remove.patch
