--- a/series.conf
+++ b/series.conf
@@ -10362,6 +10362,7 @@
 	patches.suse/msft-hv-2528-Netvsc-Call-hv_unmap_memory-in-the-netvsc_device_rem.patch
 	patches.suse/octeontx2-af-Don-t-enable-Pause-frames-by-default.patch
 	patches.suse/octeontx2-af-Priority-flow-control-configuration-sup.patch
+	patches.suse/octeontx2-af-Flow-control-resource-management.patch
 	patches.suse/net-enetc-allocate-CBD-ring-data-memory-using-DMA-co.patch
 	patches.suse/ath10k-fix-memory-overwrite-of-the-WoWLAN-wakeup-pac.patch
 	patches.suse/ath5k-fix-OOB-in-ath5k_eeprom_read_pcal_info_5111.patch
