--- a/series.conf
+++ b/series.conf
@@ -5530,6 +5530,7 @@
 	patches.suse/mt76-mt7915-fix-muar_idx-in-mt7915_mcu_alloc_sta_req.patch
 	patches.suse/gre-sit-Don-t-generate-link-local-addr-if-addr_gen_m.patch
 	patches.suse/devlink-Delete-obsolete-parameters-publish-API.patch
+	patches.suse/octeontx2-af-Increase-number-of-reserved-entries-in-.patch
 	patches.suse/can-bittiming-can_fixup_bittiming-change-type-of-tse.patch
 	patches.suse/net-dsa-avoid-refcount-warnings-when-port_-fdb-mdb-_.patch
 	patches.suse/net-hns3-add-debugfs-support-for-interrupt-coalesce.patch
