--- a/series.conf
+++ b/series.conf
@@ -11720,6 +11720,7 @@
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
 	patches.suse/net-ieee802154-ca8210-Fix-lifs-sifs-periods.patch
+	patches.suse/octeontx2-af-debugfs-fix-error-return-of-allocations.patch
 	patches.suse/ath11k-acquire-ab-base_lock-in-unassign-when-finding.patch
 	patches.suse/ath9k-fix-ar9003_get_eepmisc.patch
 	patches.suse/mwifiex-add-mutex-lock-for-call-in-mwifiex_dfs_chan_.patch
