--- a/series.conf
+++ b/series.conf
@@ -875,6 +875,7 @@
 	patches.suse/octeontx2-af-Add-debug-messages-for-failures.patch
 	patches.suse/octeontx2-pf-Enable-NETIF_F_RXALL-support-for-VF-dri.patch
 	patches.suse/octeontx2-pf-Ntuple-filters-support-for-VF-netdev.patch
+	patches.suse/octeontx2-pf-Sort-the-allocated-MCAM-entry-indices.patch
 	patches.suse/iavf-use-mutexes-for-locking-of-critical-sections.patch
 	patches.suse/i40e-Fix-spelling-mistake-dissable-disable.patch
 	patches.suse/selftests-nci-Fix-the-code-for-next-nlattr-offset.patch
