octeontx2-af: Modify install flow error codes (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -870,6 +870,7 @@
 	patches.suse/net-mlx5-Bridge-extract-FDB-delete-notification-to-f.patch
 	patches.suse/net-mlx5-Bridge-allow-merged-eswitch-connectivity.patch
 	patches.suse/net-mlx5-Bridge-support-LAG.patch
+	patches.suse/octeontx2-af-Modify-install-flow-error-codes.patch
 	patches.suse/iavf-use-mutexes-for-locking-of-critical-sections.patch
 	patches.suse/i40e-Fix-spelling-mistake-dissable-disable.patch
 	patches.suse/selftests-nci-Fix-the-code-for-next-nlattr-offset.patch
