octeontx2-af: Add KPU changes to parse NGIO as separate layer (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -9036,6 +9036,7 @@
 	patches.suse/octeontx2-af-Increase-link-credit-restore-polling-ti.patch
 	patches.suse/octeontx2-af-cn10k-Do-not-enable-RPM-loopback-for-LP.patch
 	patches.suse/octeontx2-pf-Forward-error-codes-to-VF.patch
+	patches.suse/octeontx2-af-Add-KPU-changes-to-parse-NGIO-as-separa.patch
 	patches.suse/net-sfp-ignore-disabled-SFP-node.patch
 	patches.suse/ibmvnic-Allow-extra-failures-before-disabling.patch
 	patches.suse/ibmvnic-init-running_cap_crqs-early.patch
