--- a/series.conf
+++ b/series.conf
@@ -1009,6 +1009,7 @@
 	patches.suse/octeontx2-pf-cleanup-transmit-link-deriving-logic.patch
 	patches.suse/octeontx2-af-nix-and-lbk-in-loop-mode-in-98xx.patch
 	patches.suse/octeontx2-af-Add-SDP-interface-support.patch
+	patches.suse/octeontx2-af-Add-free-rsrc-count-mbox-msg.patch
 	patches.suse/samples-pktgen-fix-to-print-when-terminated-normally.patch
 	patches.suse/ionic-remove-old-work-task-types.patch
 	patches.suse/ionic-flatten-calls-to-set-rx-mode.patch
