--- a/series.conf
+++ b/series.conf
@@ -1002,6 +1002,7 @@
 	patches.suse/msft-hv-2431-net-mana-Add-support-for-EQ-sharing.patch
 	patches.suse/msft-hv-2432-net-mana-Add-WARN_ON_ONCE-in-case-of-CQE-read-overfl.patch
 	patches.suse/octeontx2-af-cn10k-Set-cache-lines-for-NPA-batch-all.patch
+	patches.suse/octeontx2-af-Change-the-order-of-queue-work-and-inte.patch
 	patches.suse/octeontx2-pf-cleanup-transmit-link-deriving-logic.patch
 	patches.suse/samples-pktgen-fix-to-print-when-terminated-normally.patch
 	patches.suse/ionic-remove-old-work-task-types.patch
