--- a/series.conf
+++ b/series.conf
@@ -2904,6 +2904,7 @@
 	patches.suse/watchdog-Start-watchdog-in-watchdog_set_last_hw_keep.patch
 	patches.suse/bnxt_en-Fix-64-bit-doorbell-operation-on-32-bit-kern.patch
 	patches.suse/octeontx2-af-Add-additional-register-check-to-rvu_po.patch
+	patches.suse/octeontx2-pf-cn10K-Reserve-LMTST-lines-per-core.patch
 	patches.suse/net-dsa-tag_rtl4_a-Fix-egress-tags.patch
 	patches.suse/mptcp-fix-possible-divide-by-zero.patch
 	patches.suse/selftests-mptcp-clean-tmp-files-in-simult_flows.patch
