--- a/series.conf
+++ b/series.conf
@@ -959,6 +959,7 @@
 	patches.suse/octeontx2-af-Handle-return-value-in-block-reset.patch
 	patches.suse/octeontx2-pf-Don-t-mask-out-supported-link-modes.patch
 	patches.suse/octeontx2-pf-send-correct-vlan-priority-mask-to-npc_.patch
+	patches.suse/octeontx2-af-Use-DMA_ATTR_FORCE_CONTIGUOUS-attribute.patch
 	patches.suse/octeontx2-af-Check-capability-flag-while-freeing-ipo.patch
 	patches.suse/octeontx2-pf-Don-t-install-VLAN-offload-rule-if-netd.patch
 	patches.suse/octeontx2-pf-Fix-algorithm-index-in-MCAM-rules-with-.patch
