--- a/series.conf
+++ b/series.conf
@@ -12259,6 +12259,7 @@
 	patches.suse/regulator-mt6315-regulator-fix-invalid-allowed-mode.patch
 	patches.suse/gpio-pca953x-use-the-correct-register-address-to-do-.patch
 	patches.suse/gpio-adp5588-Remove-support-for-platform-setup-and-t.patch
+	patches.suse/octeontx2-pf-replace-bitmap_weight-with-bitmap_empty.patch
 	patches.suse/drm-amd-pm-use-bitmap_-from-to-_arr32-where-appropri.patch
 	patches.suse/cifs-fix-potential-double-free-during-failed-mount.patch
 	patches.suse/cifs-remove-repeated-debug-message-on-cifs_put_smb_ses-.patch
