--- a/series.conf
+++ b/series.conf
@@ -5186,6 +5186,7 @@
 	patches.suse/net-mlx4-Use-array_size-helper-in-copy_to_user.patch
 	patches.suse/gve-Use-kvcalloc-instead-of-kvzalloc.patch
 	patches.suse/devlink-Add-missed-notifications-iterators.patch
+	patches.suse/octeontx2-af-Adjust-LA-pointer-for-cpt-parse-header.patch
 	patches.suse/ixgbe-let-the-xdpdrv-work-with-more-than-64-cpus.patch
 	patches.suse/net-mlx4_en-Add-XDP_REDIRECT-statistics.patch
 	patches.suse/devlink-report-maximum-number-of-snapshots-with-regi.patch
