--- a/series.conf
+++ b/series.conf
@@ -9030,6 +9030,7 @@
 	patches.suse/i40e-fix-unsigned-stat-widths.patch
 	patches.suse/octeontx2-af-Do-not-fixup-all-VF-action-entries.patch
 	patches.suse/octeontx2-af-Fix-LBK-backpressure-id-count.patch
+	patches.suse/octeontx2-af-Retry-until-RVU-block-reset-complete.patch
 	patches.suse/octeontx2-af-cn10k-Do-not-enable-RPM-loopback-for-LP.patch
 	patches.suse/octeontx2-pf-Forward-error-codes-to-VF.patch
 	patches.suse/net-sfp-ignore-disabled-SFP-node.patch
