--- a/series.conf
+++ b/series.conf
@@ -8296,6 +8296,7 @@
 	patches.suse/net-mlx5-Set-command-entry-semaphore-up-once-got-ind.patch
 	patches.suse/Revert-net-mlx5-Add-retry-mechanism-to-the-command-e.patch
 	patches.suse/octeontx2-af-Increment-ptp-refcount-before-use.patch
+	patches.suse/octeontx2-nicvf-Free-VF-PTP-resources.patch
 	patches.suse/ax25-uninitialized-variable-in-ax25_setsockopt.patch
 	patches.suse/can-softing_cs-softingcs_probe-fix-memleak-on-regist.patch
 	patches.suse/can-softing-softing_startstop-fix-set-but-not-used-v.patch
