--- a/series.conf
+++ b/series.conf
@@ -5173,6 +5173,7 @@
 	patches.suse/octeontx2-af-cn10k-RPM-hardware-timestamp-configurat.patch
 	patches.suse/octeontx2-af-Use-ptp-input-clock-info-from-firmware-.patch
 	patches.suse/octeontx2-af-Add-external-ptp-input-clock.patch
+	patches.suse/octeontx2-pf-Use-hardware-register-for-CQE-count.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/octeontx2-pf-Enable-promisc-allmulti-match-MCAM-entr.patch
 	patches.suse/ice-Add-DSCP-support.patch
