octeontx2-af: Remove redundant initialization of variable pin (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5188,6 +5188,7 @@
 	patches.suse/devlink-Add-missed-notifications-iterators.patch
 	patches.suse/octeontx2-af-Adjust-LA-pointer-for-cpt-parse-header.patch
 	patches.suse/octeontx2-pf-Add-XDP-support-to-netdev-PF.patch
+	patches.suse/octeontx2-af-Remove-redundant-initialization-of-vari-75f81afb.patch
 	patches.suse/ixgbe-let-the-xdpdrv-work-with-more-than-64-cpus.patch
 	patches.suse/net-mlx4_en-Add-XDP_REDIRECT-statistics.patch
 	patches.suse/devlink-report-maximum-number-of-snapshots-with-regi.patch
