--- a/series.conf
+++ b/series.conf
@@ -880,6 +880,7 @@
 	patches.suse/octeontx2-pf-devlink-params-support-to-set-mcam-entr.patch
 	patches.suse/octeontx2-af-Allocate-low-priority-entries-for-PF.patch
 	patches.suse/octeontx2-af-cn10K-Get-NPC-counters-value.patch
+	patches.suse/octeontx2-af-configure-npc-for-cn10k-to-allow-packet.patch
 	patches.suse/iavf-use-mutexes-for-locking-of-critical-sections.patch
 	patches.suse/i40e-Fix-spelling-mistake-dissable-disable.patch
 	patches.suse/selftests-nci-Fix-the-code-for-next-nlattr-offset.patch
