octeontx2-af: Allow to configure flow tag LSB byte as RSS adder (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -1005,6 +1005,7 @@
 	patches.suse/octeontx2-af-Change-the-order-of-queue-work-and-inte.patch
 	patches.suse/octeontx2-af-Wait-for-TX-link-idle-for-credits-chang.patch
 	patches.suse/octeontx2-af-enable-tx-shaping-feature-for-96xx-C0.patch
+	patches.suse/octeontx2-af-Allow-to-configure-flow-tag-LSB-byte-as.patch
 	patches.suse/octeontx2-pf-cleanup-transmit-link-deriving-logic.patch
 	patches.suse/samples-pktgen-fix-to-print-when-terminated-normally.patch
 	patches.suse/ionic-remove-old-work-task-types.patch
