octeontx2-af: Handle return value in block reset (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -956,6 +956,7 @@
 	patches.suse/mac80211-Fix-insufficient-headroom-issue-for-AMSDU.patch
 	patches.suse/octeontx2-pf-Fix-NIX1_RX-interface-backpressure.patch
 	patches.suse/octeontx2-af-cn10k-Fix-SDP-base-channel-number.patch
+	patches.suse/octeontx2-af-Handle-return-value-in-block-reset.patch
 	patches.suse/octeontx2-pf-send-correct-vlan-priority-mask-to-npc_.patch
 	patches.suse/octeontx2-af-Check-capability-flag-while-freeing-ipo.patch
 	patches.suse/octeontx2-pf-Don-t-install-VLAN-offload-rule-if-netd.patch
