--- a/series.conf
+++ b/series.conf
@@ -872,6 +872,7 @@
 	patches.suse/net-mlx5-Bridge-support-LAG.patch
 	patches.suse/octeontx2-af-Modify-install-flow-error-codes.patch
 	patches.suse/octeontx2-af-add-proper-return-codes-for-AF-mailbox-.patch
+	patches.suse/octeontx2-af-Add-debug-messages-for-failures.patch
 	patches.suse/iavf-use-mutexes-for-locking-of-critical-sections.patch
 	patches.suse/i40e-Fix-spelling-mistake-dissable-disable.patch
 	patches.suse/selftests-nci-Fix-the-code-for-next-nlattr-offset.patch
