octeontx2-af: verify CQ context updates (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5127,6 +5127,7 @@
 	patches.suse/libbpf-Don-t-crash-on-object-files-with-no-symbol-ta.patch
 	patches.suse/net-net_namespace-Fix-undefined-member-in-key_remove.patch
 	patches.suse/net-phylink-don-t-call-netif_carrier_off-with-NULL-n.patch
+	patches.suse/octeontx2-af-verify-CQ-context-updates.patch
 	patches.suse/devlink-Make-devlink_register-to-be-void.patch
 	patches.suse/net-mlx4-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/bnxt_en-Check-devlink-allocation-and-registration-st.patch
