octeontx2-af: Reset PTP config in FLR handler (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5169,6 +5169,7 @@
 	patches.suse/net-dsa-rtl8366rb-Fix-off-by-one-bug.patch
 	patches.suse/net-dsa-rtl8366-Fix-a-bug-in-deleting-VLANs.patch
 	patches.suse/net-mlx5e-check-return-value-of-rhashtable_init.patch
+	patches.suse/octeontx2-af-Reset-PTP-config-in-FLR-handler.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/octeontx2-pf-Enable-promisc-allmulti-match-MCAM-entr.patch
 	patches.suse/ice-Add-DSCP-support.patch
