octeontx2-af: Fix interrupt name strings (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -8298,6 +8298,7 @@
 	patches.suse/octeontx2-af-Increment-ptp-refcount-before-use.patch
 	patches.suse/octeontx2-nicvf-Free-VF-PTP-resources.patch
 	patches.suse/ax25-uninitialized-variable-in-ax25_setsockopt.patch
+	patches.suse/octeontx2-af-Fix-interrupt-name-strings.patch
 	patches.suse/can-softing_cs-softingcs_probe-fix-memleak-on-regist.patch
 	patches.suse/can-softing-softing_startstop-fix-set-but-not-used-v.patch
 	patches.suse/can-xilinx_can-xcan_probe-check-for-error-irq.patch
