--- a/series.conf
+++ b/series.conf
@@ -1049,6 +1049,7 @@
 	patches.suse/phy-marvell-phy-mvebu-cp110-comphy-Rename-HS-SGMMI-t.patch
 	patches.suse/phy-marvell-phy-mvebu-a3700-comphy-Rename-HS-SGMMI-t.patch
 	patches.suse/phy-marvell-phy-mvebu-a3700-comphy-Remove-unsupporte.patch
+	patches.suse/octeontx2-af-cn10K-support-for-sched-lmtst-and-other.patch
 	patches.suse/bnxt-count-packets-discarded-because-of-netpoll.patch
 	patches.suse/bnxt-count-discards-due-to-memory-allocation-errors.patch
 	patches.suse/net-hns3-add-trace-event-in-hclge_gen_resp_to_vf.patch
