octeontx2-af: Optimize KPU1 processing for variable-length headers (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5150,6 +5150,7 @@
 	patches.suse/net-mlx5e-Enable-TC-offload-for-egress-MACVLAN.patch
 	patches.suse/net-mlx5e-Enable-TC-offload-for-ingress-MACVLAN.patch
 	patches.suse/octeontx2-af-Limit-KPU-parsing-for-GTPU-packets.patch
+	patches.suse/octeontx2-af-Optimize-KPU1-processing-for-variable-l.patch
 	patches.suse/selftests-net-fib_nexthops-Wait-before-checking-repo.patch
 	patches.suse/net-stmmac-fix-gcc-10-Wrestrict-warning.patch
 	patches.suse/devlink-Notify-users-when-objects-are-accessible.patch
