--- a/series.conf
+++ b/series.conf
@@ -892,6 +892,7 @@
 	patches.suse/can-tcan4x5x-cdev_to_priv-remove-stray-empty-line.patch
 	patches.suse/can-m_can-fix-block-comment-style.patch
 	patches.suse/can-c_can-c_can_do_tx-fix-typo-in-comment.patch
+	patches.suse/octeontx2-af-remove-redudant-second-error-check-on-v.patch
 	patches.suse/Bluetooth-btusb-Add-support-for-IMC-Networks-Mediate.patch
 	patches.suse/Bluetooth-sco-prevent-information-leak-in-sco_conn_d.patch
 	patches.suse/Bluetooth-btusb-Fix-a-unspported-condition-to-set-av.patch
