octeontx2-af: Add mbox to retrieve bandwidth profile free count (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -1012,6 +1012,7 @@
 	patches.suse/octeontx2-af-Add-free-rsrc-count-mbox-msg.patch
 	patches.suse/octeontx2-af-Add-PTP-device-id-for-CN10K-and-95O-sil.patch
 	patches.suse/octeontx2-af-Remove-channel-verification-while-insta.patch
+	patches.suse/octeontx2-af-Add-mbox-to-retrieve-bandwidth-profile-.patch
 	patches.suse/samples-pktgen-fix-to-print-when-terminated-normally.patch
 	patches.suse/ionic-remove-old-work-task-types.patch
 	patches.suse/ionic-flatten-calls-to-set-rx-mode.patch
