--- a/series.conf
+++ b/series.conf
@@ -11737,6 +11737,7 @@
 	patches.suse/ath10k-skip-ath10k_halt-during-suspend-for-driver-st.patch
 	patches.suse/carl9170-tx-fix-an-incorrect-use-of-list-iterator.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
+	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/cfg80211-declare-MODULE_FIRMWARE-for-regulatory.db.patch
 	patches.suse/mac80211-upgrade-passive-scan-to-active-scan-on-DFS-.patch
