--- a/series.conf
+++ b/series.conf
@@ -5372,6 +5372,7 @@
 	patches.suse/net-fealnx-fix-build-for-UML.patch
 	patches.suse/net-intel-igc_ptp-fix-build-for-UML.patch
 	patches.suse/net-tulip-winbond-840-fix-build-for-UML.patch
+	patches.suse/octeontx2-af-Enable-CPT-HW-interrupts.patch
 	patches.suse/tcp-switch-orphan_count-to-bare-per-cpu-counters.patch
 	patches.suse/soc-fsl-dpio-extract-the-QBMAN-clock-frequency-from-.patch
 	patches.suse/soc-fsl-dpio-add-support-for-irq-coalescing-per-soft.patch
