octeontx2-pf: CN10K: Hide RPM stats over ethtool (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -5118,6 +5118,7 @@
 	patches.suse/mlxsw-core-Initialize-switch-driver-last.patch
 	patches.suse/mlxsw-core-Remove-mlxsw_core_is_initialized.patch
 	patches.suse/net-chelsio-cxgb4vf-Make-use-of-the-helper-function-.patch
+	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/net-e1000e-solve-insmod-Unknown-symbol-mutex_lock-er.patch
 	patches.suse/devlink-Delete-not-used-devlink-APIs.patch
 	patches.suse/libbpf-Don-t-crash-on-object-files-with-no-symbol-ta.patch
