--- a/series.conf
+++ b/series.conf
@@ -10393,6 +10393,7 @@
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
 	patches.suse/i40e-remove-dead-stores-on-XSK-hotpath.patch
 	patches.suse/octeontx2-pf-cn10k-add-support-for-new-ptp-timestamp.patch
+	patches.suse/octeontx2-af-cn10k-add-workaround-for-ptp-errata.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
