octeontx2-af: nix and lbk in loop mode in 98xx (jsc#SLE-24682).

--- a/series.conf
+++ b/series.conf
@@ -1007,6 +1007,7 @@
 	patches.suse/octeontx2-af-enable-tx-shaping-feature-for-96xx-C0.patch
 	patches.suse/octeontx2-af-Allow-to-configure-flow-tag-LSB-byte-as.patch
 	patches.suse/octeontx2-pf-cleanup-transmit-link-deriving-logic.patch
+	patches.suse/octeontx2-af-nix-and-lbk-in-loop-mode-in-98xx.patch
 	patches.suse/samples-pktgen-fix-to-print-when-terminated-normally.patch
 	patches.suse/ionic-remove-old-work-task-types.patch
 	patches.suse/ionic-flatten-calls-to-set-rx-mode.patch
