kbuild: add marker for build log of *.mod.o (jsc#SLE-24559).

--- a/series.conf
+++ b/series.conf
@@ -5706,6 +5706,7 @@
 	patches.suse/2067-drm-nouveau-Fix-ordering-between-TTM-and-GEM-release.patch
 	patches.suse/2068-drm-nouveau-bar-gm20b-Avoid-BAR1-teardown-during-ini.patch
 	patches.suse/kbuild-Fail-if-gold-linker-is-detected.patch
+	patches.suse/kbuild-add-M-marker-for-build-log-of-.mod.o.patch
 	patches.suse/docs-kbuild-fix-invalid-ReST-syntax.patch
 	patches.suse/docs-kbuild-remove-cc-ldoption-from-document-again.patch
 	patches.suse/kbuild-Do-not-enable-Wimplicit-fallthrough-for-clang.patch
