--- a/series.conf
+++ b/series.conf
@@ -5707,6 +5707,7 @@
 	patches.suse/2068-drm-nouveau-bar-gm20b-Avoid-BAR1-teardown-during-ini.patch
 	patches.suse/kbuild-Fail-if-gold-linker-is-detected.patch
 	patches.suse/kbuild-add-M-marker-for-build-log-of-.mod.o.patch
+	patches.suse/kbuild-rebuild-modules-when-module-linker-scripts-are-upda.patch
 	patches.suse/docs-kbuild-fix-invalid-ReST-syntax.patch
 	patches.suse/docs-kbuild-remove-cc-ldoption-from-document-again.patch
 	patches.suse/kbuild-Do-not-enable-Wimplicit-fallthrough-for-clang.patch
