--- a/series.conf
+++ b/series.conf
@@ -5708,6 +5708,7 @@
 	patches.suse/kbuild-Fail-if-gold-linker-is-detected.patch
 	patches.suse/kbuild-add-M-marker-for-build-log-of-.mod.o.patch
 	patches.suse/kbuild-rebuild-modules-when-module-linker-scripts-are-upda.patch
+	patches.suse/kbuild-split-final-module-linking-out-into-Makefile.modfin.patch
 	patches.suse/docs-kbuild-fix-invalid-ReST-syntax.patch
 	patches.suse/docs-kbuild-remove-cc-ldoption-from-document-again.patch
 	patches.suse/kbuild-Do-not-enable-Wimplicit-fallthrough-for-clang.patch
