--- a/series.conf
+++ b/series.conf
@@ -14742,6 +14742,7 @@
 	patches.suse/0028-modpost-dump-missing-namespaces-into-a-single-module.patch
 	patches.suse/0029-scripts-nsdeps-support-nsdeps-for-external-module-bu.patch
 	patches.suse/0030-modpost-remove-unneeded-local-variable-in-contains_n.patch
+	patches.suse/kbuild-drop-wildcard-check-in-if_changed-for-faster-rebuil.patch
 	patches.suse/1885-kbuild-remove-header-compile-test.patch
 	patches.suse/percpu-refcount-Use-normal-instead-of-RCU-sched.patch
 	patches.suse/irq_work-Convert-flags-to-atomic_t.patch
