kbuild: rename any-prereq to newer-prereqs (jsc#SLE-24559).

--- a/series.conf
+++ b/series.conf
@@ -14743,6 +14743,7 @@
 	patches.suse/0029-scripts-nsdeps-support-nsdeps-for-external-module-bu.patch
 	patches.suse/0030-modpost-remove-unneeded-local-variable-in-contains_n.patch
 	patches.suse/kbuild-drop-wildcard-check-in-if_changed-for-faster-rebuil.patch
+	patches.suse/kbuild-rename-any-prereq-to-newer-prereqs.patch
 	patches.suse/1885-kbuild-remove-header-compile-test.patch
 	patches.suse/percpu-refcount-Use-normal-instead-of-RCU-sched.patch
 	patches.suse/irq_work-Convert-flags-to-atomic_t.patch
