bpf: Provide function to get vmlinux BTF information (jsc#SLE-24559).
- Refresh
  patches.suse/bpf-Add-bpf_patch_call_args-prototype-to-include-lin.patch.

--- a/series.conf
+++ b/series.conf
@@ -44908,6 +44908,7 @@
 	patches.suse/bpf-cpumap-Remove-rcpu-pointer-from-cpu_map_build_sk.patch
 	patches.suse/bpf-disallow-attaching-modify_return-tracing-functio.patch
 	patches.suse/selftests-Remove-fmod_ret-from-test_overhead.patch
+	patches.suse/bpf-Provide-function-to-get-vmlinux-BTF-information.patch
 	patches.suse/xsk-Fix-a-documentation-mistake-in-xsk_queue.h.patch
 	patches.suse/selftests-bpf-Move-and-extend-ASSERT_xxx-testing-mac.patch
 	patches.suse/selftests-bpf-Fix-endianness-issues-in-sk_lookup-ctx.patch
