--- a/series.conf
+++ b/series.conf
@@ -46751,6 +46751,7 @@
 	patches.suse/net-evaluate-net.ipvX.conf.all.ignore_routes_with_li.patch
 	patches.suse/net-evaluate-net.ipv4.conf.all.proxy_arp_pvlan.patch
 	patches.suse/bpf-Add-in-kernel-split-BTF-support.patch
+	patches.suse/bpf-Assign-ID-to-vmlinux-BTF-and-return-extra-info-for-BTF.patch
 	patches.suse/selftest-bpf-Add-missed-ip6ip6-test-back.patch
 	patches.suse/samples-bpf-Remove-unused-test_ipip.sh.patch
 	patches.suse/tools-bpftool-Fix-build-slowdown.patch
