kbuild: Build kernel module BTFs if BTF is enabled and pahole supports it (jsc#SLE-24559).
- Update config files:
  - PAHOLE_HAS_SPLIT_BTF=y
  - DEBUG_INFO_BTF_MODULES=y

--- a/series.conf
+++ b/series.conf
@@ -46752,6 +46752,7 @@
 	patches.suse/net-evaluate-net.ipv4.conf.all.proxy_arp_pvlan.patch
 	patches.suse/bpf-Add-in-kernel-split-BTF-support.patch
 	patches.suse/bpf-Assign-ID-to-vmlinux-BTF-and-return-extra-info-for-BTF.patch
+	patches.suse/kbuild-Build-kernel-module-BTFs-if-BTF-is-enabled-and-paho.patch
 	patches.suse/selftest-bpf-Add-missed-ip6ip6-test-back.patch
 	patches.suse/samples-bpf-Remove-unused-test_ipip.sh.patch
 	patches.suse/tools-bpftool-Fix-build-slowdown.patch
