bpf: Load and verify kernel module BTFs (jsc#SLE-24559).
- kabi: create module private struct to hold btf size/data (jsc#SLE-24559).

--- a/series.conf
+++ b/series.conf
@@ -46753,6 +46753,7 @@
 	patches.suse/bpf-Add-in-kernel-split-BTF-support.patch
 	patches.suse/bpf-Assign-ID-to-vmlinux-BTF-and-return-extra-info-for-BTF.patch
 	patches.suse/kbuild-Build-kernel-module-BTFs-if-BTF-is-enabled-and-paho.patch
+	patches.suse/bpf-Load-and-verify-kernel-module-BTFs.patch
 	patches.suse/selftest-bpf-Add-missed-ip6ip6-test-back.patch
 	patches.suse/samples-bpf-Remove-unused-test_ipip.sh.patch
 	patches.suse/tools-bpftool-Fix-build-slowdown.patch
@@ -56914,6 +56915,7 @@
 	patches.kabi/kABI-Fix-kABI-after-KVM-nVMX-handle-nested-posted-interrupts-when-apicv-.patch
 	patches.kabi/rtsx_usb-kABI-workaround.patch
 	patches.kabi/net-tun-fixup-kabi.patch
+	patches.kabi/kabi-create-module-private-struct-to-hold-btf-size-data.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
