kbuild: Skip module BTF generation for out-of-tree external modules (jsc#SLE-24559).

--- a/series.conf
+++ b/series.conf
@@ -46802,6 +46802,7 @@
 	patches.suse/net-mlx5-Add-ts_cqe_to_dest_cqn-related-bits.patch
 	patches.suse/net-mlx5-Update-the-list-of-the-PCI-supported-device-dd8595ea.patch
 	patches.suse/bpf-Simplify-task_file_seq_get_next.patch
+	patches.suse/kbuild-Skip-module-BTF-generation-for-out-of-tree-external.patch
 	patches.suse/samples-bpf-Refactor-hbm-program-with-libbpf.patch
 	patches.suse/samples-bpf-Refactor-test_cgrp2_sock2-program-with-l.patch
 	patches.suse/libbpf-Sanitise-map-names-before-pinning.patch
