bpf: Keep module's btf_data_size intact after load (jsc#SLE-24559).
- Refresh
  patches.kabi/kabi-create-module-private-struct-to-hold-btf-size-data.patch.

--- a/series.conf
+++ b/series.conf
@@ -46808,6 +46808,7 @@
 	patches.suse/samples-bpf-Refactor-test_cgrp2_sock2-program-with-l.patch
 	patches.suse/libbpf-Sanitise-map-names-before-pinning.patch
 	patches.suse/bpf-fix-bpf_put_raw_tracepoint-s-use-of-_module_address.patch
+	patches.suse/bpf-Keep-module-s-btf_data_size-intact-after-load.patch
 	patches.suse/selftests-bpf-Fix-invalid-use-of-strncat-in-test_soc.patch
 	patches.suse/rsi-Fix-TX-EAPOL-packet-handling-against-iwlwifi-AP.patch
 	patches.suse/rtw88-remove-extraneous-const-qualifier.patch
