--- a/series.conf
+++ b/series.conf
@@ -55128,6 +55128,7 @@
 	patches.suse/mt76-mt7603-check-sta_rates-pointer-in-mt7603_sta_ra.patch
 	patches.suse/mt76-mt7615-check-sta_rates-pointer-in-mt7615_sta_ra.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
+	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mismatche.patch
 	patches.suse/ixgbe-add-the-ability-for-the-PF-to-disable-VF-link-.patch
 	patches.suse/ixgbe-add-improvement-for-MDD-response-functionality.patch
 	patches.suse/ixgbevf-add-disable-link-state.patch
