scripts: dummy-tools, add pahole (jsc#SLE-24559).

--- a/series.conf
+++ b/series.conf
@@ -55858,6 +55858,7 @@
 	patches.suse/soc-qcom-smsm-Fix-missing-of_node_put-in-smsm_parse_.patch
 	patches.suse/arm-mediatek-select-arch-timer-for-mt7629.patch
 	patches.suse/ARM-omap-remove-debug-leds-driver.patch
+	patches.suse/scripts-dummy-tools-add-pahole.patch
 	patches.suse/drivers-base-node.c-fix-compaction-sysfs-file-leak.patch
 	patches.suse/drivers-base-memory-fix-an-unlikely-reference-counti.patch
 	patches.suse/nfsd-Fix-null-ptr-deref-in-nfsd_fill_super.patch
