KABI: cgroup: Restore KABI of css_set (bsc#1201610).

--- a/series.conf
+++ b/series.conf
@@ -14123,6 +14123,7 @@
 
 	patches.kabi/kABI-fix-adding-field-to-scsi_device.patch
 	patches.kabi/kABI-fix-adding-field-to-ufs_hba.patch
+	patches.kabi/KABI-cgroup-restore-KABI-of-css_set.patch
 
 	patches.kabi/rtsx_usb-kABI-workaround.patch
 	patches.kabi/phy_device-kABI-workaround.patch
