KABI: cgroup: Restore KABI of css_set (bsc#1201610).

--- a/series.conf
+++ b/series.conf
@@ -57210,6 +57210,7 @@
 	patches.kabi/move-devm_allocate-to-end-of-structure-for-kABI.patch
 	patches.kabi/kabi-nvme-workaround-header-include.patch
 	patches.kabi/kABI-Fix-kABI-after-KVM-nVMX-handle-nested-posted-interrupts-when-apicv-.patch
+	patches.kabi/KABI-cgroup-restore-KABI-of-css_set.patch
 	patches.kabi/rtsx_usb-kABI-workaround.patch
 	patches.kabi/net-tun-fixup-kabi.patch
 	patches.kabi/kabi-create-module-private-struct-to-hold-btf-size-data.patch
