random: document add_hwgenerator_randomness() with other input functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54154,6 +54154,7 @@
 	patches.suse/power-reset-ltc2952-Fix-use-of-floating-point-litera.patch
 	patches.suse/ARM-dts-armada-38x-Add-generic-compatible-to-UART-nodes.patch
 	patches.suse/arm64-clear_page-shouldn-t-use-DC-ZVA-when-DCZID_EL0.DZP-1.patch
+	patches.suse/random-document-add_hwgenerator_randomness-with-othe.patch
 	patches.suse/random-fix-data-race-on-crng_node_pool.patch
 	patches.suse/random-fix-data-race-on-crng-init-time.patch
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
