--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1544,3 +1544,4 @@ b4e00444cab4c3f3fec876dc0cccc8cbb0d1a948 # improbable bug, sensitive path, bsc#1
 c92cbaea3cc0a80807e386922f801eb6d3652c81 # no such function
 36d18b5664ef617ccf4da266291d2f2342fab89d # no such code
 83810f84ecf11dfc5a9414a8b762c3501b328185 # may cause regression for charging from switched off laptops and bsc#1201691
+703f7066f40599c290babdb79dd61319264987e9 # breaks kABI for a cleanup
