--- a/series.conf
+++ b/series.conf
@@ -54505,6 +54505,7 @@
 	patches.suse/dmaengine-at_xdmac-Fix-concurrency-over-xfers_list.patch
 	patches.suse/dmaengine-at_xdmac-Fix-lld-view-setting.patch
 	patches.suse/dmaengine-at_xdmac-Fix-at_xdmac_lld-struct-definitio.patch
+	patches.suse/random-fix-typo-in-comments.patch
 	patches.suse/f2fs-fix-to-do-sanity-check-on-inode-type-during-gar.patch
 	patches.suse/nfc-st21nfca-Fix-potential-buffer-overflows-in-EVT_T.patch
 	patches.suse/net-bonding-fix-bond_xmit_broadcast-return-value-err.patch
