ip: Fix a data-race around sysctl_ip_autobind_reuse (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2276,6 +2276,7 @@
 	patches.kernel.org/5.18.15-034-ip-Fix-data-races-around-sysctl_ip_fwd_use_pm.patch
 	patches.kernel.org/5.18.15-035-ip-Fix-data-races-around-sysctl_ip_fwd_update.patch
 	patches.kernel.org/5.18.15-036-ip-Fix-data-races-around-sysctl_ip_nonlocal_b.patch
+	patches.kernel.org/5.18.15-037-ip-Fix-a-data-race-around-sysctl_ip_autobind_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
