--- a/series.conf
+++ b/series.conf
@@ -2334,6 +2334,7 @@
 	patches.kernel.org/5.18.15-092-net-dsa-move-reset-of-VLAN-filtering-to-dsa_p.patch
 	patches.kernel.org/5.18.15-093-net-dsa-fix-NULL-pointer-dereference-in-dsa_p.patch
 	patches.kernel.org/5.18.15-094-net-stmmac-remove-redunctant-disable-xPCS-EEE.patch
+	patches.kernel.org/5.18.15-095-gpio-pca953x-only-use-single-read-write-for-N.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
