tcp: Fix data-races around sysctl_tcp_migrate_req (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2308,6 +2308,7 @@
 	patches.kernel.org/5.18.15-066-tcp-Fix-data-races-around-keepalive-sysctl-kn.patch
 	patches.kernel.org/5.18.15-067-tcp-Fix-data-races-around-sysctl_tcp_syn-ack-.patch
 	patches.kernel.org/5.18.15-068-tcp-Fix-data-races-around-sysctl_tcp_syncooki.patch
+	patches.kernel.org/5.18.15-069-tcp-Fix-data-races-around-sysctl_tcp_migrate_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
