--- a/series.conf
+++ b/series.conf
@@ -2277,6 +2277,7 @@
 	patches.kernel.org/5.18.15-035-ip-Fix-data-races-around-sysctl_ip_fwd_update.patch
 	patches.kernel.org/5.18.15-036-ip-Fix-data-races-around-sysctl_ip_nonlocal_b.patch
 	patches.kernel.org/5.18.15-037-ip-Fix-a-data-race-around-sysctl_ip_autobind_.patch
+	patches.kernel.org/5.18.15-038-ip-Fix-a-data-race-around-sysctl_fwmark_refle.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
