watchqueue: make sure to serialize 'wqueue->defunct' properly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2393,6 +2393,7 @@
 	patches.kernel.org/5.18.15-151-exfat-use-updated-exfat_chain-directly-during.patch
 	patches.kernel.org/5.18.15-152-x86-amd-Use-IBPB-for-firmware-calls.patch
 	patches.kernel.org/5.18.15-153-x86-alternative-Report-missing-return-thunk-d.patch
+	patches.kernel.org/5.18.15-154-watchqueue-make-sure-to-serialize-wqueue-defu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
