--- a/series.conf
+++ b/series.conf
@@ -2389,6 +2389,7 @@
 	patches.kernel.org/5.18.15-147-crypto-qat-add-param-check-for-RSA.patch
 	patches.kernel.org/5.18.15-148-crypto-qat-add-param-check-for-DH.patch
 	patches.kernel.org/5.18.15-149-crypto-qat-re-enable-registration-of-algorith.patch
+	patches.kernel.org/5.18.15-150-exfat-fix-referencing-wrong-parent-directory-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
