--- a/series.conf
+++ b/series.conf
@@ -2358,6 +2358,7 @@
 	patches.kernel.org/5.18.15-116-udp-Fix-a-data-race-around-sysctl_udp_l3mdev_.patch
 	patches.kernel.org/5.18.15-117-tcp-Fix-data-races-around-sysctl-knobs-relate.patch
 	patches.kernel.org/5.18.15-118-tcp-Fix-a-data-race-around-sysctl_tcp_early_r.patch
+	patches.kernel.org/5.18.15-119-tcp-Fix-data-races-around-sysctl_tcp_recovery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
