KVM: Don't null dereference ops->destroy (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2371,6 +2371,7 @@
 	patches.kernel.org/5.18.15-129-gpio-gpio-xilinx-Fix-integer-overflow.patch
 	patches.kernel.org/5.18.15-130-KVM-selftests-Fix-target-thread-to-be-migrate.patch
 	patches.kernel.org/5.18.15-131-spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-p.patch
+	patches.kernel.org/5.18.15-132-KVM-Don-t-null-dereference-ops-destroy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
