PCI: hv: Fix hv_arch_irq_unmask() for multi-MSI (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2254,6 +2254,7 @@
 	patches.kernel.org/5.18.15-012-bus-mhi-host-pci_generic-add-Telit-FN980-v1-h.patch
 	patches.kernel.org/5.18.15-013-bus-mhi-host-pci_generic-add-Telit-FN990.patch
 	patches.kernel.org/5.18.15-014-PCI-hv-Fix-multi-MSI-to-allow-more-than-one-M.patch
+	patches.kernel.org/5.18.15-015-PCI-hv-Fix-hv_arch_irq_unmask-for-multi-MSI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
