ipv4: Fix a data-race around sysctl_fib_multipath_use_neigh (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2351,6 +2351,7 @@
 	patches.kernel.org/5.18.15-109-drm-panel-edp-Fix-variable-typo-when-saving-h.patch
 	patches.kernel.org/5.18.15-110-drm-imx-dcss-Add-missing-of_node_put-in-fail-.patch
 	patches.kernel.org/5.18.15-111-can-rcar_canfd-Add-missing-of_node_put-in-rca.patch
+	patches.kernel.org/5.18.15-112-ipv4-Fix-a-data-race-around-sysctl_fib_multip.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
