--- a/series.conf
+++ b/series.conf
@@ -2347,6 +2347,7 @@
 	patches.kernel.org/5.18.15-105-amt-drop-unexpected-advertisement-message.patch
 	patches.kernel.org/5.18.15-106-amt-drop-unexpected-query-message.patch
 	patches.kernel.org/5.18.15-107-amt-drop-unexpected-multicast-data.patch
+	patches.kernel.org/5.18.15-108-amt-do-not-use-amt-nr_tunnels-outside-of-lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
