iavf: Fix VLAN_V2 addition/rejection (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2316,6 +2316,7 @@
 	patches.kernel.org/5.18.15-074-tcp-Fix-data-races-around-sysctl_max_syn_back.patch
 	patches.kernel.org/5.18.15-075-tcp-Fix-data-races-around-sysctl_tcp_fastopen.patch
 	patches.kernel.org/5.18.15-076-tcp-Fix-data-races-around-sysctl_tcp_fastopen.patch
+	patches.kernel.org/5.18.15-077-iavf-Fix-VLAN_V2-addition-rejection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
