tcp: Fix a data-race around sysctl_tcp_thin_linear_timeouts (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2359,6 +2359,7 @@
 	patches.kernel.org/5.18.15-117-tcp-Fix-data-races-around-sysctl-knobs-relate.patch
 	patches.kernel.org/5.18.15-118-tcp-Fix-a-data-race-around-sysctl_tcp_early_r.patch
 	patches.kernel.org/5.18.15-119-tcp-Fix-data-races-around-sysctl_tcp_recovery.patch
+	patches.kernel.org/5.18.15-120-tcp-Fix-a-data-race-around-sysctl_tcp_thin_li.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
