--- a/series.conf
+++ b/series.conf
@@ -2304,6 +2304,7 @@
 	patches.kernel.org/5.18.15-062-igmp-Fix-data-races-around-sysctl_igmp_llm_re.patch
 	patches.kernel.org/5.18.15-063-igmp-Fix-a-data-race-around-sysctl_igmp_max_m.patch
 	patches.kernel.org/5.18.15-064-igmp-Fix-data-races-around-sysctl_igmp_max_ms.patch
+	patches.kernel.org/5.18.15-065-igmp-Fix-data-races-around-sysctl_igmp_qrv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
