amt: remove unnecessary locks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2341,6 +2341,7 @@
 	patches.kernel.org/5.18.15-099-net-dsa-sja1105-silent-spi_device_id-warnings.patch
 	patches.kernel.org/5.18.15-100-net-dsa-vitesse-vsc73xx-silent-spi_device_id-.patch
 	patches.kernel.org/5.18.15-101-amt-use-workqueue-for-gateway-side-message-ha.patch
+	patches.kernel.org/5.18.15-102-amt-remove-unnecessary-locks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
