--- a/series.conf
+++ b/series.conf
@@ -2290,6 +2290,7 @@
 	patches.kernel.org/5.18.15-048-stmmac-dwmac-mediatek-fix-clock-issue.patch
 	patches.kernel.org/5.18.15-049-net-stmmac-fix-pm-runtime-issue-in-stmmac_dvr.patch
 	patches.kernel.org/5.18.15-050-net-stmmac-fix-unbalanced-ptp-clock-issue-in-.patch
+	patches.kernel.org/5.18.15-051-net-dsa-microchip-ksz_common-Fix-refcount-lea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
