tcp: Fix data-races around sysctl_tcp_syn(ack)?_retries (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2306,6 +2306,7 @@
 	patches.kernel.org/5.18.15-064-igmp-Fix-data-races-around-sysctl_igmp_max_ms.patch
 	patches.kernel.org/5.18.15-065-igmp-Fix-data-races-around-sysctl_igmp_qrv.patch
 	patches.kernel.org/5.18.15-066-tcp-Fix-data-races-around-keepalive-sysctl-kn.patch
+	patches.kernel.org/5.18.15-067-tcp-Fix-data-races-around-sysctl_tcp_syn-ack-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
