ip: Fix data-races around sysctl_ip_fwd_update_priority (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2274,6 +2274,7 @@
 	patches.kernel.org/5.18.15-032-igc-Reinstate-IGC_REMOVED-logic-and-implement.patch
 	patches.kernel.org/5.18.15-033-ip-Fix-data-races-around-sysctl_ip_no_pmtu_di.patch
 	patches.kernel.org/5.18.15-034-ip-Fix-data-races-around-sysctl_ip_fwd_use_pm.patch
+	patches.kernel.org/5.18.15-035-ip-Fix-data-races-around-sysctl_ip_fwd_update.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
