pinctrl: sunplus: Add check for kcalloc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2267,6 +2267,7 @@
 	patches.kernel.org/5.18.15-025-pinctrl-ralink-rename-MT7628-an-functions-to-.patch
 	patches.kernel.org/5.18.15-026-pinctrl-ralink-rename-pinctrl-rt2880-to-pinct.patch
 	patches.kernel.org/5.18.15-027-pinctrl-ralink-Check-for-null-return-of-devm_.patch
+	patches.kernel.org/5.18.15-028-pinctrl-sunplus-Add-check-for-kcalloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
