power/reset: arm-versatile: Fix refcount leak in versatile_reboot_probe (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2261,6 +2261,7 @@
 	patches.kernel.org/5.18.15-019-ip-Fix-data-races-around-sysctl_ip_default_tt.patch
 	patches.kernel.org/5.18.15-020-xfrm-xfrm_policy-fix-a-possible-double-xfrm_p.patch
 	patches.kernel.org/5.18.15-021-power-supply-ab8500_fg-add-missing-destroy_wo.patch
+	patches.kernel.org/5.18.15-022-power-reset-arm-versatile-Fix-refcount-leak-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
