net: lan966x: Fix taking rtnl_lock while holding spin_lock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2323,6 +2323,7 @@
 	patches.kernel.org/5.18.15-081-ACPI-CPPC-Don-t-require-flexible-address-spac.patch
 	patches.kernel.org/5.18.15-082-pinctrl-armada-37xx-Reuse-GPIO-fwnode-in-arma.patch
 	patches.kernel.org/5.18.15-083-pinctrl-armada-37xx-make-irq_lock-a-raw-spinl.patch
+	patches.kernel.org/5.18.15-084-net-lan966x-Fix-taking-rtnl_lock-while-holdin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
