--- a/series.conf
+++ b/series.conf
@@ -2366,6 +2366,7 @@
 	patches.kernel.org/5.18.15-124-tcp-Fix-a-data-race-around-sysctl_tcp_rfc1337.patch
 	patches.kernel.org/5.18.15-125-tcp-Fix-a-data-race-around-sysctl_tcp_abort_o.patch
 	patches.kernel.org/5.18.15-126-tcp-Fix-data-races-around-sysctl_tcp_max_reor.patch
+	patches.kernel.org/5.18.15-127-net-sched-cls_api-Fix-flow-action-initializat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
