ip: Fix data-races around sysctl_ip_no_pmtu_disc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2272,6 +2272,7 @@
 	patches.kernel.org/5.18.15-030-e1000e-Enable-GPT-clock-before-sending-messag.patch
 	patches.kernel.org/5.18.15-031-Revert-e1000e-Fix-possible-HW-unit-hang-after.patch
 	patches.kernel.org/5.18.15-032-igc-Reinstate-IGC_REMOVED-logic-and-implement.patch
+	patches.kernel.org/5.18.15-033-ip-Fix-data-races-around-sysctl_ip_no_pmtu_di.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
