--- a/series.conf
+++ b/series.conf
@@ -2270,6 +2270,7 @@
 	patches.kernel.org/5.18.15-028-pinctrl-sunplus-Add-check-for-kcalloc.patch
 	patches.kernel.org/5.18.15-029-perf-core-Fix-data-race-between-perf_event_se.patch
 	patches.kernel.org/5.18.15-030-e1000e-Enable-GPT-clock-before-sending-messag.patch
+	patches.kernel.org/5.18.15-031-Revert-e1000e-Fix-possible-HW-unit-hang-after.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
