--- a/series.conf
+++ b/series.conf
@@ -2395,6 +2395,7 @@
 	patches.kernel.org/5.18.15-153-x86-alternative-Report-missing-return-thunk-d.patch
 	patches.kernel.org/5.18.15-154-watchqueue-make-sure-to-serialize-wqueue-defu.patch
 	patches.kernel.org/5.18.15-155-ASoC-SOF-pm-add-explicit-behavior-for-ACPI-S1.patch
+	patches.kernel.org/5.18.15-156-ASoC-SOF-pm-add-definitions-for-S4-and-S5-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
