net: prestera: acl: use proper mask for port selector (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2300,6 +2300,7 @@
 	patches.kernel.org/5.18.15-058-pinctrl-ocelot-Fix-pincfg.patch
 	patches.kernel.org/5.18.15-059-net-stmmac-fix-dma-queue-left-shift-overflow-.patch
 	patches.kernel.org/5.18.15-060-net-tls-Fix-race-in-TLS-device-down-flow.patch
+	patches.kernel.org/5.18.15-061-net-prestera-acl-use-proper-mask-for-port-sel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
