--- a/series.conf
+++ b/series.conf
@@ -2320,6 +2320,7 @@
 	patches.kernel.org/5.18.15-078-iavf-Disallow-changing-rx-tx-frames-and-rx-tx.patch
 	patches.kernel.org/5.18.15-079-iavf-Fix-handling-of-dummy-receive-descriptor.patch
 	patches.kernel.org/5.18.15-080-iavf-Fix-missing-state-logs.patch
+	patches.kernel.org/5.18.15-081-ACPI-CPPC-Don-t-require-flexible-address-spac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
