--- a/series.conf
+++ b/series.conf
@@ -2315,6 +2315,7 @@
 	patches.kernel.org/5.18.15-073-tcp-Fix-a-data-race-around-sysctl_tcp_tw_reus.patch
 	patches.kernel.org/5.18.15-074-tcp-Fix-data-races-around-sysctl_max_syn_back.patch
 	patches.kernel.org/5.18.15-075-tcp-Fix-data-races-around-sysctl_tcp_fastopen.patch
+	patches.kernel.org/5.18.15-076-tcp-Fix-data-races-around-sysctl_tcp_fastopen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
