--- a/series.conf
+++ b/series.conf
@@ -2310,6 +2310,7 @@
 	patches.kernel.org/5.18.15-068-tcp-Fix-data-races-around-sysctl_tcp_syncooki.patch
 	patches.kernel.org/5.18.15-069-tcp-Fix-data-races-around-sysctl_tcp_migrate_.patch
 	patches.kernel.org/5.18.15-070-tcp-Fix-data-races-around-sysctl_tcp_reorderi.patch
+	patches.kernel.org/5.18.15-071-tcp-Fix-data-races-around-some-timeout-sysctl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
