--- a/series.conf
+++ b/series.conf
@@ -2338,6 +2338,7 @@
 	patches.kernel.org/5.18.15-096-gpio-pca953x-use-the-correct-range-when-do-re.patch
 	patches.kernel.org/5.18.15-097-gpio-pca953x-use-the-correct-register-address.patch
 	patches.kernel.org/5.18.15-098-be2net-Fix-buffer-overflow-in-be_get_module_e.patch
+	patches.kernel.org/5.18.15-099-net-dsa-sja1105-silent-spi_device_id-warnings.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
