--- a/series.conf
+++ b/series.conf
@@ -2364,6 +2364,7 @@
 	patches.kernel.org/5.18.15-122-tcp-Fix-a-data-race-around-sysctl_tcp_retrans.patch
 	patches.kernel.org/5.18.15-123-tcp-Fix-a-data-race-around-sysctl_tcp_stdurg.patch
 	patches.kernel.org/5.18.15-124-tcp-Fix-a-data-race-around-sysctl_tcp_rfc1337.patch
+	patches.kernel.org/5.18.15-125-tcp-Fix-a-data-race-around-sysctl_tcp_abort_o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
