--- a/series.conf
+++ b/series.conf
@@ -2353,6 +2353,7 @@
 	patches.kernel.org/5.18.15-111-can-rcar_canfd-Add-missing-of_node_put-in-rca.patch
 	patches.kernel.org/5.18.15-112-ipv4-Fix-a-data-race-around-sysctl_fib_multip.patch
 	patches.kernel.org/5.18.15-113-ipv4-Fix-data-races-around-sysctl_fib_multipa.patch
+	patches.kernel.org/5.18.15-114-ipv4-Fix-data-races-around-sysctl_fib_multipa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
