--- a/series.conf
+++ b/series.conf
@@ -2287,6 +2287,7 @@
 	patches.kernel.org/5.18.15-045-tcp-Fix-a-data-race-around-sysctl_tcp_mtu_pro.patch
 	patches.kernel.org/5.18.15-046-tcp-Fix-a-data-race-around-sysctl_tcp_probe_t.patch
 	patches.kernel.org/5.18.15-047-tcp-Fix-a-data-race-around-sysctl_tcp_probe_i.patch
+	patches.kernel.org/5.18.15-048-stmmac-dwmac-mediatek-fix-clock-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
