tcp: Fix a data-race around sysctl_tcp_notsent_lowat (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2311,6 +2311,7 @@
 	patches.kernel.org/5.18.15-069-tcp-Fix-data-races-around-sysctl_tcp_migrate_.patch
 	patches.kernel.org/5.18.15-070-tcp-Fix-data-races-around-sysctl_tcp_reorderi.patch
 	patches.kernel.org/5.18.15-071-tcp-Fix-data-races-around-some-timeout-sysctl.patch
+	patches.kernel.org/5.18.15-072-tcp-Fix-a-data-race-around-sysctl_tcp_notsent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
