--- a/series.conf
+++ b/series.conf
@@ -2362,6 +2362,7 @@
 	patches.kernel.org/5.18.15-120-tcp-Fix-a-data-race-around-sysctl_tcp_thin_li.patch
 	patches.kernel.org/5.18.15-121-tcp-Fix-data-races-around-sysctl_tcp_slow_sta.patch
 	patches.kernel.org/5.18.15-122-tcp-Fix-a-data-race-around-sysctl_tcp_retrans.patch
+	patches.kernel.org/5.18.15-123-tcp-Fix-a-data-race-around-sysctl_tcp_stdurg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
