tcp/udp: Make early_demux back namespacified (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2291,6 +2291,7 @@
 	patches.kernel.org/5.18.15-049-net-stmmac-fix-pm-runtime-issue-in-stmmac_dvr.patch
 	patches.kernel.org/5.18.15-050-net-stmmac-fix-unbalanced-ptp-clock-issue-in-.patch
 	patches.kernel.org/5.18.15-051-net-dsa-microchip-ksz_common-Fix-refcount-lea.patch
+	patches.kernel.org/5.18.15-052-tcp-udp-Make-early_demux-back-namespacified.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
