--- a/series.conf
+++ b/series.conf
@@ -2329,6 +2329,7 @@
 	patches.kernel.org/5.18.15-087-net-lan966x-Fix-usage-of-lan966x-mac_lock-ins.patch
 	patches.kernel.org/5.18.15-088-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 	patches.kernel.org/5.18.15-089-i40e-Fix-erroneous-adapter-reinitialization-d.patch
+	patches.kernel.org/5.18.15-090-ixgbe-Add-locking-to-prevent-panic-when-setti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
