selftests: gpio: fix include path to kernel headers for out of tree builds (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2367,6 +2367,7 @@
 	patches.kernel.org/5.18.15-125-tcp-Fix-a-data-race-around-sysctl_tcp_abort_o.patch
 	patches.kernel.org/5.18.15-126-tcp-Fix-data-races-around-sysctl_tcp_max_reor.patch
 	patches.kernel.org/5.18.15-127-net-sched-cls_api-Fix-flow-action-initializat.patch
+	patches.kernel.org/5.18.15-128-selftests-gpio-fix-include-path-to-kernel-hea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
