iavf: Fix missing state logs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2319,6 +2319,7 @@
 	patches.kernel.org/5.18.15-077-iavf-Fix-VLAN_V2-addition-rejection.patch
 	patches.kernel.org/5.18.15-078-iavf-Disallow-changing-rx-tx-frames-and-rx-tx.patch
 	patches.kernel.org/5.18.15-079-iavf-Fix-handling-of-dummy-receive-descriptor.patch
+	patches.kernel.org/5.18.15-080-iavf-Fix-missing-state-logs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
