tcp: Fix data-races around sysctl_tcp_l3mdev_accept (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2280,6 +2280,7 @@
 	patches.kernel.org/5.18.15-038-ip-Fix-a-data-race-around-sysctl_fwmark_refle.patch
 	patches.kernel.org/5.18.15-039-tcp-dccp-Fix-a-data-race-around-sysctl_tcp_fw.patch
 	patches.kernel.org/5.18.15-040-tcp-sk-sk_bound_dev_if-once-in-inet_request_b.patch
+	patches.kernel.org/5.18.15-041-tcp-Fix-data-races-around-sysctl_tcp_l3mdev_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
