--- a/series.conf
+++ b/series.conf
@@ -2387,6 +2387,7 @@
 	patches.kernel.org/5.18.15-145-crypto-qat-remove-dma_free_coherent-for-RSA.patch
 	patches.kernel.org/5.18.15-146-crypto-qat-remove-dma_free_coherent-for-DH.patch
 	patches.kernel.org/5.18.15-147-crypto-qat-add-param-check-for-RSA.patch
+	patches.kernel.org/5.18.15-148-crypto-qat-add-param-check-for-DH.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
