crypto: qat - fix memory leak in RSA (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2383,6 +2383,7 @@
 	patches.kernel.org/5.18.15-141-crypto-qat-use-pre-allocated-buffers-in-datap.patch
 	patches.kernel.org/5.18.15-142-crypto-qat-refactor-submission-logic.patch
 	patches.kernel.org/5.18.15-143-crypto-qat-add-backlog-mechanism.patch
+	patches.kernel.org/5.18.15-144-crypto-qat-fix-memory-leak-in-RSA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
