--- a/series.conf
+++ b/series.conf
@@ -2349,6 +2349,7 @@
 	patches.kernel.org/5.18.15-107-amt-drop-unexpected-multicast-data.patch
 	patches.kernel.org/5.18.15-108-amt-do-not-use-amt-nr_tunnels-outside-of-lock.patch
 	patches.kernel.org/5.18.15-109-drm-panel-edp-Fix-variable-typo-when-saving-h.patch
+	patches.kernel.org/5.18.15-110-drm-imx-dcss-Add-missing-of_node_put-in-fail-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
