--- a/series.conf
+++ b/series.conf
@@ -2250,6 +2250,7 @@
 	patches.kernel.org/5.18.15-008-drm-ttm-fix-locking-in-vmap-vunmap-TTM-GEM-he.patch
 	patches.kernel.org/5.18.15-009-drm-amd-display-Fix-new-dmub-notification-ena.patch
 	patches.kernel.org/5.18.15-010-drm-scheduler-Don-t-kill-jobs-in-interrupt-co.patch
+	patches.kernel.org/5.18.15-011-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
