amt: use READ_ONCE() in amt module (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2342,6 +2342,7 @@
 	patches.kernel.org/5.18.15-100-net-dsa-vitesse-vsc73xx-silent-spi_device_id-.patch
 	patches.kernel.org/5.18.15-101-amt-use-workqueue-for-gateway-side-message-ha.patch
 	patches.kernel.org/5.18.15-102-amt-remove-unnecessary-locks.patch
+	patches.kernel.org/5.18.15-103-amt-use-READ_ONCE-in-amt-module.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
