--- a/series.conf
+++ b/series.conf
@@ -2263,6 +2263,7 @@
 	patches.kernel.org/5.18.15-021-power-supply-ab8500_fg-add-missing-destroy_wo.patch
 	patches.kernel.org/5.18.15-022-power-reset-arm-versatile-Fix-refcount-leak-i.patch
 	patches.kernel.org/5.18.15-023-RDMA-irdma-Do-not-advertise-1GB-page-size-for.patch
+	patches.kernel.org/5.18.15-024-RDMA-irdma-Fix-sleep-from-invalid-context-BUG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
