can: rcar_canfd: Add missing of_node_put() in rcar_canfd_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2350,6 +2350,7 @@
 	patches.kernel.org/5.18.15-108-amt-do-not-use-amt-nr_tunnels-outside-of-lock.patch
 	patches.kernel.org/5.18.15-109-drm-panel-edp-Fix-variable-typo-when-saving-h.patch
 	patches.kernel.org/5.18.15-110-drm-imx-dcss-Add-missing-of_node_put-in-fail-.patch
+	patches.kernel.org/5.18.15-111-can-rcar_canfd-Add-missing-of_node_put-in-rca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
