ASoC: SOF: Intel: disable IMR boot when resuming from ACPI S4 and S5 states (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2396,6 +2396,7 @@
 	patches.kernel.org/5.18.15-154-watchqueue-make-sure-to-serialize-wqueue-defu.patch
 	patches.kernel.org/5.18.15-155-ASoC-SOF-pm-add-explicit-behavior-for-ACPI-S1.patch
 	patches.kernel.org/5.18.15-156-ASoC-SOF-pm-add-definitions-for-S4-and-S5-sta.patch
+	patches.kernel.org/5.18.15-157-ASoC-SOF-Intel-disable-IMR-boot-when-resuming.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
