lockdown: Fix kexec lockdown bypass with ima policy (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2244,6 +2244,7 @@
 	patches.kernel.org/5.18.15-002-pinctrl-stm32-fix-optional-IRQ-support-to-gpi.patch
 	patches.kernel.org/5.18.15-003-riscv-add-as-options-for-modules-with-assembl.patch
 	patches.kernel.org/5.18.15-004-mlxsw-spectrum_router-Fix-IPv4-nexthop-gatewa.patch
+	patches.kernel.org/5.18.15-005-lockdown-Fix-kexec-lockdown-bypass-with-ima-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
