amt: add missing regeneration nonce logic in request logic (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2343,6 +2343,7 @@
 	patches.kernel.org/5.18.15-101-amt-use-workqueue-for-gateway-side-message-ha.patch
 	patches.kernel.org/5.18.15-102-amt-remove-unnecessary-locks.patch
 	patches.kernel.org/5.18.15-103-amt-use-READ_ONCE-in-amt-module.patch
+	patches.kernel.org/5.18.15-104-amt-add-missing-regeneration-nonce-logic-in-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
